# pinch_n_print_cli

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  PROMPT.md  README.md  fix_dispatch.py  package-lock.json  ralph.yml  ralph.yml.example
cli/slicer-cli/: Cargo.toml
cli/slicer-cli/src/: cmd_build.rs  cmd_new.rs  cmd_run.rs  cmd_test.rs  cmd_validate.rs  lib.rs  main.rs
cli/slicer-cli/tests/: cmd_build_tdd.rs  cmd_new_tdd.rs  cmd_test_tdd.rs  cmd_validate_tdd.rs
crates/pnp-cli/: Cargo.toml
crates/pnp-cli/src/: helpers_cmd.rs  io.rs  lib.rs  main.rs  module_new.rs  support_preview.rs  visual_debug.rs  visual_debug_gcode.rs
crates/pnp-cli/tests/: cli_tdd.rs  e2e_integration_tdd.rs  helpers_cli.rs  m73_progress_tdd.rs  module_new_tdd.rs  module_search_path_tdd.rs  slice_cancel_tdd.rs  slice_instrumentation_fork_tdd.rs  slice_progress_events_default_tdd.rs  support_preview_tdd.rs  visual_debug_agent_determinism_tdd.rs  visual_debug_gcode_renderer_tdd.rs  visual_debug_intermediate_renderer_tdd.rs  visual_debug_overlays_tdd.rs  visual_debug_request_bundle_tdd.rs  visual_debug_typed_tap_capture_tdd.rs  visual_debug_validation_tdd.rs
crates/slicer-core/: Cargo.toml
crates/slicer-core/benches/: polygon_ops.rs
crates/slicer-core/src/: aabb_lines_2d.rs  aabb_tree.rs  flow.rs  geometry.rs  lib.rs  medial_axis.rs  paint_policy.rs  paint_region.rs  perimeter_utils.rs  polygon_ops.rs  polygon_tree.rs  stage_io.rs  top_surface_split.rs  triangle_mesh_slicer.rs  voronoi.rs
crates/slicer-core/tests/: aabb_tree_tdd.rs  algo_lightning_tdd.rs  algo_mesh_analysis_tdd.rs  algo_mesh_segmentation_tdd.rs  algo_overhang_classifier_tdd.rs  algo_paint_segmentation_tdd.rs  algo_prepass_slice_tdd.rs  algo_region_mapping_tdd.rs  algo_support_geometry_tdd.rs  arachne_annulus_split.rs  arachne_beading_junction_radius_bands.rs  arachne_beading_propagation_delta_bound.rs  arachne_beding_propagation_side_table.rs  arachne_construction_apply_transitions_mirror_fix.rs  arachne_construction_epilogue.rs  arachne_construction_insert_node_rib_split.rs  arachne_construction_node_distance_perp_foot.rs  arachne_d5_taper_coverage.rs  arachne_filter_noncentral_regions.rs  arachne_generate_junctions_canonical_regression.rs  arachne_invariants.rs  arachne_junction_upward_half_edge_only.rs  arachne_local_maxima_single_beads.rs  arachne_parity_red_apply_transitions.rs  arachne_parity_red_chain_junctions.rs  arachne_parity_red_insert_node.rs  arachne_parity_red_is_odd_semantics.rs  arachne_parity_red_junction_bands.rs  arachne_parity_red_perimeter_index.rs  arachne_parity_red_propagation_bug.rs  arachne_parity_red_transition_ends.rs  arachne_pipeline.rs  arachne_postprocess_order.rs  arachne_remove_small_per_line_min_width.rs  arachne_simplify_distance_gates.rs  arachne_simplify_intersection_distance_gate_tdd.rs  arachne_stitch_can_reverse.rs  arachne_stitch_chain_junctions_t_to_fix.rs  arachne_stitch_perimeter_index_bead_index.rs  arachne_stitch_tiny_polygon.rs  (+36 more)
crates/slicer-gcode/: Cargo.toml
crates/slicer-gcode/src/: emit.rs  error.rs  estimator.rs  flavor.rs  lib.rs  m73.rs  serialize.rs  thumbnail.rs  thumbnail_btt.rs  thumbnail_colpic.rs
crates/slicer-gcode/tests/: emit_tool_guard_tdd.rs  estimator.rs  finalization_aware_travel_tdd.rs  gcode_emit_per_role_tolerance_tdd.rs  gcode_emit_tdd.rs  gcode_emit_travel_anchor_tdd.rs  gcode_feedrate_emission_tdd.rs  gcode_flavor_dialect_tdd.rs  gcode_relative_extrusion_tdd.rs  gcode_toolchange_wrapping.rs  golden_emit_tdd.rs  m73.rs  overhang_speed_tdd.rs  thumbnail_formats_tdd.rs
crates/slicer-helpers/: Cargo.toml
crates/slicer-helpers/benches/: mesh_ops.rs
crates/slicer-helpers/src/: decimate.rs  lib.rs  repair.rs  split.rs
crates/slicer-helpers/tests/: decimate_tdd.rs  import_step_tdd.rs  repair_tdd.rs  split_tdd.rs
crates/slicer-host/: Cargo.toml  build.rs
crates/slicer-host/benches/: per_stage.rs  pipeline.rs  shell_classification.rs  wasm_modules.rs
crates/slicer-host/src/: blackboard.rs  cli.rs  config_resolution.rs  config_schema.rs  dag.rs  dag_cli.rs  dispatch.rs  dispatch_helpers.rs  execution_plan.rs  gcode_emit.rs  helpers_cmd.rs  instance_pool.rs  instrumentation.rs  layer_executor.rs  layer_finalization.rs  layer_slice.rs  lib.rs  main.rs  manifest.rs  mesh_analysis.rs  mesh_segmentation.rs  model_loader.rs  model_loader_sidecar.rs  module_search_path.rs  overhang_classifier.rs  paint_segmentation.rs  pipeline.rs  postpass.rs  prepass.rs  prepass_slice.rs  progress_events.rs  python_bridge.rs  region_mapping.rs  slice_postprocess.rs  slice_postprocess_prepass.rs  support_geometry.rs  topology.rs  validation.rs  wasm_instance.rs  wit_host.rs
crates/slicer-host/tests/: acceptance_gate_gaps_tdd.rs  benchy_4color_modifier_part_e2e_tdd.rs  benchy_end_to_end_tdd.rs  benchy_painted_e2e_tdd.rs  benchy_painted_overrides_e2e_tdd.rs  blackboard_layer_arena_tdd.rs  blackboard_support_geometry_slot_tdd.rs  bridge_detector_tdd.rs  claim_transition_matrix_tdd.rs  cli_tdd.rs  config_bounds_enforcement_tdd.rs  config_resolution_paint_semantic_tdd.rs  config_resolution_tdd.rs  config_schema_tdd.rs  config_view_binding_tdd.rs  config_view_encapsulation_source_tdd.rs  core_module_components_tdd.rs  core_module_ir_access_contract_tdd.rs  core_module_macro_adoption_tdd.rs  dag_cli_integration.rs  dag_construction_tdd.rs  dag_validation_tdd.rs  dispatch_tdd.rs  e2e_integration_tdd.rs  execution_plan_tdd.rs  external_surface_classification_tdd.rs  fill_role_claims_tdd.rs  finalization_aware_travel_tdd.rs  finalization_builder_permute.rs  finalization_builder_readback.rs  finalization_live_tdd.rs  gcode_emit_format_tdd.rs  (+111 more)
crates/slicer-ir/: Cargo.toml
crates/slicer-macros/: Cargo.toml  build.rs
crates/slicer-model-io/: Cargo.toml
crates/slicer-runtime/: Cargo.toml  build.rs
crates/slicer-scheduler/: Cargo.toml
crates/slicer-sdk/: Cargo.toml
crates/slicer-wasm-host/: Cargo.toml  build.rs
test-guests/path-optimization-multi-read/: Cargo.toml
test-guests/sdk-layer-infill-guest/: Cargo.toml
test-guests/sdk-postpass-text-guest/: Cargo.toml
(+2808 files in other folders)
