[workspace]
members = [
    "crates/slicer-host",
    "crates/slicer-core",
    "crates/slicer-ir",
    "crates/slicer-macros",
    "crates/slicer-schema",
    "crates/slicer-sdk",
    "crates/slicer-test",
    "cli/slicer-cli",
    "crates/slicer-helpers",
    "modules/core-modules/layer-planner-default",
    "modules/core-modules/classic-perimeters",
    "modules/core-modules/rectilinear-infill",
    "modules/core-modules/traditional-support",
    "modules/core-modules/arachne-perimeters",
    "modules/core-modules/gyroid-infill",
    "modules/core-modules/lightning-infill",
    "modules/core-modules/seam-placer",
    "modules/core-modules/tree-support",
    "modules/core-modules/support-surface-ironing",
    "modules/core-modules/top-surface-ironing",
    "modules/core-modules/mesh-segmentation",
    "modules/core-modules/paint-segmentation",
    "modules/core-modules/wipe-tower",
    "modules/core-modules/skirt-brim",
    "modules/core-modules/paint-region-annotator",
    "modules/core-modules/fuzzy-skin",
    "modules/core-modules/path-optimization-default",
    "modules/core-modules/seam-planner-default",
    "modules/core-modules/support-planner",
    "modules/core-modules/part-cooling",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.91.0"
authors = ["ModularSlicer Team"]
version = "0.1.0"

[workspace.dependencies]
# Core dependencies
wasmtime = "43.0.0"
wit-bindgen = "0.57.1"
rayon = "1.80"
geo = "0.28"
nalgebra = "0.32"
clipper2-rust = "1.0.3"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"
meshopt = "0.6"
truck-stepio = "0.3"
truck-meshalgo = "0.4"
truck-modeling = "0.6"

# CLI dependencies
clap = "4.6.1"

# Python bridge (embedded interpreter for TextPostProcess modules; see
# crates/slicer-host/src/python_bridge.rs). `auto-initialize` causes pyo3 to
# call Py_Initialize on first `Python::with_gil`; `extension-module` is
# intentionally NOT set because the host embeds the interpreter rather
# than being loaded as a Python extension.
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }

[workspace.lints.rust]
missing_docs = "warn"
unused_imports = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
# Tests in this workspace freely use vec! literals, identity assertions, and
# slice::from_ref-equivalent patterns; setting these style lints to allow
# keeps `cargo clippy --all-targets -- -D warnings` green without rewriting
# every fixture.
useless_vec = "allow"
redundant_clone = "allow"
cloned_ref_to_slice_refs = "allow"
single_range_in_vec_init = "allow"
needless_range_loop = "allow"
unnecessary_map_or = "allow"
assertions_on_constants = "allow"
bool_assert_comparison = "allow"
nonminimal_bool = "allow"
overly_complex_bool_expr = "allow"
default_constructed_unit_structs = "allow"
type_complexity = "allow"
needless_lifetimes = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
map_identity = "allow"
ptr_arg = "allow"
result_unit_err = "allow"
new_without_default = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
