[package]
name = "slicer-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "slicer"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
slicer-schema = { path = "../../crates/slicer-schema" }

[dev-dependencies]
tempfile = "3"
