[package]
name = "pnp-cli"
version = "0.1.0"
edition = "2021"
authors = ["ModularSlicer Team"]

[[bin]]
name = "pnp_cli"
path = "src/main.rs"

[lib]
name = "pnp_cli"
path = "src/lib.rs"

[dependencies]
slicer-runtime = { path = "../slicer-runtime" }
slicer-schema = { path = "../slicer-schema" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1.0"
toml = "0.8"
stl_io = "0.11"
slicer-ir = { path = "../slicer-ir" }

[lints]
workspace = true
