[package]
name = "pnp-cli"
version = "0.1.0"
edition = "2021"
authors = ["ModularSlicer Team"]

[[bin]]
name = "pnp_cli"
path = "src/main.rs"

[lib]
name = "pnp_cli"
path = "src/lib.rs"

[features]
default = ["report"]
report = ["slicer-runtime/report"]

[dependencies]
slicer-runtime = { path = "../slicer-runtime", default-features = false }
slicer-schema = { path = "../slicer-schema" }
slicer-model-io = { path = "../slicer-model-io" }
slicer-helpers = { path = "../slicer-helpers" }
slicer-ir = { path = "../slicer-ir" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
stl_io = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1.0"
toml = "0.8"
stl_io = "0.11"
slicer-ir = { path = "../slicer-ir" }

[lints]
workspace = true
