[package]
name = "slicer-core"
version = "0.1.0"
edition = "2021"
authors = ["Pinch 'n Print Team"]

[features]
default = []
host-algos = ["dep:rayon", "dep:log", "dep:boostvoronoi"]

[dependencies]
clipper2-rust = { workspace = true }
log = { version = "0.4", optional = true }
rstar = "0.12"
rayon = { version = "1.10", optional = true }
boostvoronoi = { version = "0.12", optional = true }
slicer-ir = { path = "../slicer-ir" }
slicer-scheduler = { path = "../slicer-scheduler" }

[dev-dependencies]
criterion = { workspace = true }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "polygon_ops"
harness = false

[[test]]
name = "algo_mesh_analysis_tdd"
required-features = ["host-algos"]

[[test]]
name = "algo_prepass_slice_tdd"
required-features = ["host-algos"]

[[test]]
name = "algo_support_geometry_tdd"
required-features = ["host-algos"]

[[test]]
name = "algo_region_mapping_tdd"
required-features = ["host-algos"]

[[test]]
name = "overhang_annotation_ramp_tdd"
required-features = ["host-algos"]

[[test]]
name = "overhang_annotation_no_overhang_case"
required-features = ["host-algos"]

[[test]]
name = "medial_axis_golden_tdd"
required-features = ["host-algos"]

[[test]]
name = "medial_axis_degenerate_input_tdd"
required-features = ["host-algos"]

[[test]]
name = "flow_tdd"

[[test]]
name = "wall_sequence_reorder_tdd"

[lints]
workspace = true
