[package]
name = "slicer-gcode"
version = "0.1.0"
edition = "2021"
authors = ["Pinch 'n Print Team"]

[dependencies]
slicer-ir = { path = "../slicer-ir" }
slicer-core = { path = "../slicer-core", features = ["host-algos"] }
slicer-helpers = { path = "../slicer-helpers" }
thiserror = "1.0"
log = "0.4"

[lints]
workspace = true
