[package]
name = "slicer-host"
version = "0.1.0"
edition = "2021"
authors = ["ModularSlicer Team"]

[dependencies]
slicer-ir = { path = "../slicer-ir" }
slicer-core = { path = "../slicer-core" }
toml = "0.8"
rayon = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"

[lints.rust]
missing_docs = "warn"
unused_imports = "warn"
unused_must_use = "warn"
