[package]
name = "slicer-host"
version = "0.1.0"
edition = "2021"
authors = ["ModularSlicer Team"]

[[bin]]
name = "slicer-host"
path = "src/main.rs"

[dependencies]
slicer-ir = { path = "../slicer-ir" }
slicer-core = { path = "../slicer-core" }
toml = "0.8"
rayon = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
clap = { workspace = true, features = ["derive"] }
log = "0.4"
stl_io = "0.11"
tobj = "4.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.39"
uuid = { version = "1", features = ["v4"] }
wasmtime = { workspace = true }
pyo3 = { workspace = true }

[dev-dependencies]
wat = "1.0"
tempfile = "3"
serde_json = "1.0"
slicer_sdk = { package = "slicer-sdk", path = "../slicer-sdk" }
seam_placer = { package = "seam-placer", path = "../../modules/core-modules/seam-placer" }

[lints.rust]
missing_docs = "warn"
unused_imports = "warn"
unused_must_use = "warn"
