[package]
name = "slicer-host"
version = "0.1.0"
edition = "2021"
authors = ["ModularSlicer Team"]

[[bin]]
name = "slicer-host"
path = "src/main.rs"

[dependencies]
slicer-ir = { path = "../slicer-ir" }
slicer-core = { path = "../slicer-core" }
slicer-sdk = { path = "../slicer-sdk" }
slicer-helpers = { path = "../slicer-helpers" }
toml = "0.8"
rayon = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
clap = { workspace = true, features = ["derive"] }
log = "0.4"
stl_io = "0.11"
tobj = "4.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.39"
uuid = { version = "1", features = ["v4", "v5"] }
wasmtime = { workspace = true }
pyo3 = { workspace = true }

[dev-dependencies]
wat = "1.0"
tempfile = "3"
serde_json = "1.0"
base64 = "0.22"
slicer_sdk = { package = "slicer-sdk", path = "../slicer-sdk" }
criterion = { workspace = true }
toml = "0.8"

[dev-dependencies.part-cooling]
path = "../../modules/core-modules/part-cooling"

[dev-dependencies.skirt-brim]
path = "../../modules/core-modules/skirt-brim"

[dev-dependencies.support-planner]
path = "../../modules/core-modules/support-planner"
# NOTE: no module crate dev-dependencies. SDK-level trait tests belong in
# the module's own `tests/` directory; host-level tests must exercise
# either pure host plumbing (blackboard, dispatch routing, claim dedup)
# or load the module's `.wasm` and dispatch through wasmtime.

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "per_stage"
harness = false

[[bench]]
name = "wasm_modules"
harness = false

[lints]
workspace = true
