[package]
name = "slicer-ir"
version = "0.1.0"
edition = "2021"
authors = ["ModularSlicer Team"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
postcard = { workspace = true }
serde_json = "1.0"
static_assertions = "1"

[features]
default = []
std = []

[lints]
workspace = true
