[package]
name = "slicer-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
slicer-schema = { path = "../slicer-schema" }

[dev-dependencies]
slicer-ir = { path = "../slicer-ir" }
slicer-schema = { path = "../slicer-schema" }
slicer-sdk = { path = "../slicer-sdk", features = ["test"] }

[lints]
workspace = true
