[package]
name = "slicer-runtime"
version = "0.1.0"
edition = "2021"
authors = ["ModularSlicer Team"]

[dependencies]
slicer-ir = { path = "../slicer-ir" }
slicer-core = { path = "../slicer-core" }
slicer-sdk = { path = "../slicer-sdk" }
slicer-helpers = { path = "../slicer-helpers" }
toml = "0.8"
rayon = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
clap = { workspace = true, features = ["derive"] }
log = "0.4"
directories = "6"
wasmtime = { workspace = true }
rstar = "0.12"

[dev-dependencies]
slicer-model-io = { path = "../slicer-model-io" }
witness = { path = "test-guests/witness" }
zip = { version = "2", default-features = false, features = ["deflate"] }
stl_io = "0.11"
wat = "1.0"
wit-parser = "0.247"
tempfile = "3"
serde_json = "1.0"
base64 = "0.22"
slicer_sdk = { package = "slicer-sdk", path = "../slicer-sdk" }
slicer-schema = { path = "../slicer-schema" }
criterion = { workspace = true }
toml = "0.8"
assert_cmd = "2"
predicates = "3"

[dev-dependencies.part-cooling]
path = "../../modules/core-modules/part-cooling"

[dev-dependencies.skirt-brim]
path = "../../modules/core-modules/skirt-brim"

[dev-dependencies.support-planner]
path = "../../modules/core-modules/support-planner"

[dev-dependencies.wipe-tower]
path = "../../modules/core-modules/wipe-tower"

[dev-dependencies.top-surface-ironing]
path = "../../modules/core-modules/top-surface-ironing"
# NOTE: no module crate dev-dependencies. SDK-level trait tests belong in
# the module's own `tests/` directory; host-level tests must exercise
# either pure host plumbing (blackboard, dispatch routing, claim dedup)
# or load the module's `.wasm` and dispatch through wasmtime.

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "per_stage"
harness = false

[[bench]]
name = "wasm_modules"
harness = false

[[bench]]
name = "shell_classification"
harness = false

[lints]
workspace = true
