[package]
name = "slicer-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Pinch 'n Print Team"]

[features]
default = ["report"]
report = []

[dependencies]
slicer-ir = { path = "../slicer-ir" }
slicer-core = { path = "../slicer-core", features = ["host-algos"] }
slicer-sdk = { path = "../slicer-sdk" }
slicer-helpers = { path = "../slicer-helpers" }
slicer-scheduler = { path = "../slicer-scheduler" }
slicer-wasm-host = { path = "../slicer-wasm-host" }
slicer-gcode = { path = "../slicer-gcode" }
toml = "0.8"
rayon = "1.10"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
clap = { workspace = true, features = ["derive"] }
log = "0.4"
directories = "6"
rstar = "0.12"

[dev-dependencies]
wasmtime = { workspace = true }
slicer-model-io = { path = "../slicer-model-io" }
witness = { path = "../slicer-wasm-host/test-guests/witness" }
zip = { version = "2", default-features = false, features = ["deflate"] }
stl_io = "0.11"
wat = "1.0"
wit-parser = "0.247"
tempfile = "3"
serde_json = "1.0"
base64 = "0.22"
slicer_sdk = { package = "slicer-sdk", path = "../slicer-sdk", features = ["test"] }
slicer-schema = { path = "../slicer-schema" }
criterion = { workspace = true }
toml = "0.8"
assert_cmd = "2"
predicates = "3"
sha2 = "0.10"

# Fill-claim modules — the ONLY remaining module crate dev-dependencies.
# `infill_partitioned_input_tdd` is a cross-module contract test: a single
# fixture asserts that all three fill modules confine each role's paths to the
# host-partitioned polygon for that role. It is intentionally kept here (rather
# than split per-module) because the contract is shared across the three.
#
# Single-module SDK trait tests belong in the module's own `tests/` directory;
# host plumbing tests (blackboard, dispatch routing, claim dedup) load the
# module's `.wasm` and dispatch through wasmtime — neither needs a crate dep.
[dev-dependencies.rectilinear-infill]
path = "../../modules/core-modules/rectilinear-infill"

[dev-dependencies.gyroid-infill]
path = "../../modules/core-modules/gyroid-infill"

[dev-dependencies.lightning-infill]
path = "../../modules/core-modules/lightning-infill"

[dev-dependencies.classic-perimeters]
path = "../../modules/core-modules/classic-perimeters"

# packet 108 (D-108-SEAM-CONSUMED): painted_seam_enforcer_blocker_tdd exercises
# seam-placer directly against classic-perimeters output.
[dev-dependencies.seam-placer]
path = "../../modules/core-modules/seam-placer"

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "per_stage"
harness = false

[[bench]]
name = "wasm_modules"
harness = false

[[bench]]
name = "shell_classification"
harness = false

[[bench]]
name = "gate_evidence"
harness = false

[lints]
workspace = true
