[package]
name = "slicer-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Pinch 'n Print Team"]

[dependencies]
serde = { version = "1", features = ["derive"] }
slicer-ir = { path = "../slicer-ir" }
slicer-core = { path = "../slicer-core" }
slicer-macros = { path = "../slicer-macros" }
slicer-schema = { path = "../slicer-schema" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
slicer-core = { path = "../slicer-core", features = ["host-algos"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[features]
test = []

[lints]
workspace = true
