[package]
name = "slicer-wasm-host"
version = "0.1.0"
edition = "2021"
authors = ["Pinch 'n Print Team"]
description = "WIT/wasmtime marshalling and dispatch for Pinch 'n Print's WASM module host"

[dependencies]
wasmtime = { workspace = true }
log = "0.4"
slicer-core = { path = "../slicer-core" }
slicer-ir = { path = "../slicer-ir" }
slicer-scheduler = { path = "../slicer-scheduler" }
slicer-schema = { path = "../slicer-schema" }
slicer-sdk = { path = "../slicer-sdk" }

[dev-dependencies]
witness = { path = "test-guests/witness" }
wat = "1.0"
wit-parser = "0.247"
tempfile = "3"
toml = "0.8"

[[test]]
name = "contract"
path = "tests/contract/main.rs"

[[test]]
name = "integration"
path = "tests/integration/main.rs"

[[test]]
name = "unit"
path = "tests/unit/main.rs"

[lints]
workspace = true
