[package]
name = "sdk-layer-infill-guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.57.1"
slicer-sdk = { path = "../../crates/slicer-sdk" }
slicer-ir  = { path = "../../crates/slicer-ir" }
slicer-schema = { path = "../../crates/slicer-schema" }

[workspace]
