[package]
name = "sdk-postpass-text-guest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.24"
slicer-sdk = { path = "../../crates/slicer-sdk" }
slicer-ir  = { path = "../../crates/slicer-ir" }
slicer-schema = { path = "../../crates/slicer-schema" }

[workspace]
