[package]
name = "arachne-perimeters"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Variable-width perimeter generator implementing LayerModule for Layer::Perimeters stage"

[dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk" }
slicer-ir = { path = "../../../crates/slicer-ir" }
slicer-core = { path = "../../../crates/slicer-core" }

[dev-dependencies]
