[package]
name = "fuzzy-skin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Fuzzy skin module implementing LayerModule for Layer::PerimetersPostProcess stage"

[dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk" }
slicer-ir = { path = "../../../crates/slicer-ir" }

[dev-dependencies]
