[package]
name = "infill-linker"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Infill linker module for the Layer::InfillPostProcess stage"

[dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk" }
slicer-schema = { path = "../../../crates/slicer-schema" }
slicer-ir = { path = "../../../crates/slicer-ir" }
slicer-core = { path = "../../../crates/slicer-core" }

[dev-dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk", features = ["test"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[lints]
workspace = true
