[package]
name = "layer-planner-default"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Default uniform layer planner implementing PrepassModule for LayerPlanning stage"

[dependencies]
slicer-sdk = { path = "../../../crates/slicer-sdk" }
slicer-ir = { path = "../../../crates/slicer-ir" }

[dev-dependencies]
